<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/colorView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/redTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/argb_red"
        app:layout_constraintEnd_toStartOf="@id/red"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorView" />

    <SeekBar
        android:id="@+id/red"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="255"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/redTitle"
        app:layout_constraintTop_toBottomOf="@id/colorView"
        android:progress="0"
        />

    <TextView
        android:id="@+id/blueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/argb_blue"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redTitle" />

    <SeekBar
        android:id="@+id/blue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="255"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/blueTitle"
        app:layout_constraintTop_toBottomOf="@id/red"
        android:progress="0"/>

    <TextView
        android:id="@+id/greenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/argb_green"
        app:layout_constraintEnd_toStartOf="@id/green"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blueTitle" />

    <SeekBar
        android:id="@+id/green"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="255"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/greenTitle"
        app:layout_constraintTop_toBottomOf="@id/blue"
        android:progress="0"/>

    <TextView
        android:id="@+id/alphaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/argb_alpha"
        app:layout_constraintEnd_toStartOf="@id/alpha"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greenTitle" />

    <SeekBar
        android:id="@+id/alpha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="255"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/alphaTitle"
        app:layout_constraintTop_toBottomOf="@id/green"
        android:progress="255"/>

    <TextView
        android:id="@+id/rgbToInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/colorView"
        app:layout_constraintStart_toStartOf="@id/colorView"
        app:layout_constraintEnd_toEndOf="@id/colorView"
        app:layout_constraintBottom_toBottomOf="@id/colorView"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@android:color/white"
        />



</androidx.constraintlayout.widget.ConstraintLayout>